--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>New page
+    <div></div>
+    <h1>CSS Circle Border Around Image Example
     </h1>
 </body>
 </html>
